app/assets/stylesheets/application.scss
$accent-color: #ff3355;  // pink
$breadcrumb-bg: #f8f9fa; // light bluish gray

@import "bootstrap";
@import "rails_bootstrap_forms";

body {
  padding-top: 5rem;
}

section {
  margin: 1.5rem 0;
}

footer {
  margin: 3rem 0 1.5rem;
}

h1, h2, h3, h4, h5, h6 {
  margin-bottom: 1.5rem;
}

h1 {
    font-size: 24px;
    color: $accent-color;
    font-weight: 500;
}

h2 {
    font-size: 18px;
    color: $accent-color;
    font-weight: 500;
}

h3 {
    font-size: 16px;
    color: $accent-color;
    font-weight: 500;
}

.btn {
  margin-bottom: 1.5rem;
}

.form-check {
  margin-bottom: 1rem;
}

.visit-header {
  color: #555;
  font-weight: 500;
}

.visit-info {
  border-top: 1px solid #ddd;
  padding-top: 0.5rem;
  display: block;
  min-height: 3rem;
  line-height: 1rem;
  margin-bottom: 0.5rem;
}

.visit-info-null {
  color: #ccc;
}

